// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced data table row renders a table header hover state 1`] = `"<a class=\\"slds-th__action slds-text-link_reset\\" href=\\"#\\" role=\\"button\\" tabindex=\\"-1\\"><span class=\\"slds-assistive-text\\">Sort by: </span><div class=\\"slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate\\"><span class=\\"slds-truncate\\" title=\\"Account Name\\">Account Name</span><span class=\\"slds-icon_container slds-icon-utility-arrowdown\\"><svg class=\\"slds-icon slds-icon-text-default slds-is-sortable__icon \\" aria-hidden=\\"true\\"><use xlink:href=\\"/assets/icons/utility-sprite/svg/symbols.svg#arrowdown\\"></use></svg></span></div></a>"`;

exports[`Advanced data table row should make every focusable element focusable when in actionableMode 1`] = `
<tr
  className="slds-hint-parent"
>
  <td
    className="slds-text-align_right slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-checkbox"
    >
      <input
        aria-labelledby="check-button-label-01 column-group-header"
        id="checkbox-01"
        name="options"
        tabIndex="0"
        type="checkbox"
        value="checkbox-01"
      />
      <label
        className="slds-checkbox__label"
        htmlFor="checkbox-01"
        id="check-button-label-01"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </div>
  </td>
  <th
    className="slds-cell_action-mode"
    scope="row"
    tabIndex={null}
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="0"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="10000"
    >
      10000
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="0"
      >
        Art V
      </a>
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="0"
      title="More actions for Acme"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Acme
      </span>
    </button>
  </td>
</tr>
`;

exports[`Advanced data table row should remove the row actions column 1`] = `
<tr
  className="slds-hint-parent"
>
  <td
    className="slds-text-align_right"
    role="gridcell"
  >
    <div
      className="slds-checkbox"
    >
      <input
        aria-labelledby="check-button-label-01 column-group-header"
        id="checkbox-01"
        name="options"
        tabIndex="-1"
        type="checkbox"
        value="checkbox-01"
      />
      <label
        className="slds-checkbox__label"
        htmlFor="checkbox-01"
        id="check-button-label-01"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </div>
  </td>
  <th
    className={null}
    scope="row"
    tabIndex="0"
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="10000"
    >
      10000
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Art V
      </a>
    </div>
  </td>
</tr>
`;

exports[`Advanced data table row should render a table header row 1`] = `
<thead
  className={null}
>
  <tr
    className="slds-line-height_reset"
  >
    <th
      aria-sort={null}
      className="slds-text-align_right slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": "3.25rem",
        }
      }
    >
      <span
        className="slds-assistive-text"
        id="column-group-header"
      >
        Choose a row
      </span>
      <div
        className="slds-th__action slds-th__action_form"
      >
        <div
          className="slds-checkbox"
        >
          <input
            aria-labelledby="check-select-all-label column-group-header"
            defaultChecked={null}
            id="checkbox-unique-id-1"
            name="options"
            tabIndex="0"
            type="checkbox"
            value="checkbox-unique-id-1"
          />
          <label
            className="slds-checkbox__label"
            htmlFor="checkbox-unique-id-1"
            id="check-select-all-label"
          >
            <span
              className="slds-checkbox_faux"
            />
            <span
              className="slds-form-element__label slds-assistive-text"
            >
              Select All
            </span>
          </label>
        </div>
      </div>
    </th>
    <th
      aria-label="Name"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Name"
          >
            Name
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Name column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-1"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Account Name"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Account Name"
          >
            Account Name
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Account Name column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-2"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Close Date"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Close Date"
          >
            Close Date
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Close Date column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-3"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Stage"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Stage"
          >
            Stage
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Stage column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-4"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Confidence"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Confidence"
          >
            Confidence
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Confidence column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-5"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Amount"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Amount"
          >
            Amount
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Amount column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-6"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Contact"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Contact"
          >
            Contact
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Contact column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-7"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-sort={null}
      className="slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": "3.25rem",
        }
      }
    >
      <div
        className="slds-truncate slds-assistive-text"
        title="Actions"
      >
        Actions
      </div>
    </th>
  </tr>
</thead>
`;

exports[`Advanced data table row should render a table header row with ascending sort 1`] = `
<thead
  className={null}
>
  <tr
    className="slds-line-height_reset"
  >
    <th
      aria-sort={null}
      className="slds-text-align_right slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": "3.25rem",
        }
      }
    >
      <span
        className="slds-assistive-text"
        id="column-group-header"
      >
        Choose a row
      </span>
      <div
        className="slds-th__action slds-th__action_form"
      >
        <div
          className="slds-checkbox"
        >
          <input
            aria-labelledby="check-select-all-label column-group-header"
            defaultChecked={null}
            id="checkbox-unique-id-2"
            name="options"
            tabIndex="0"
            type="checkbox"
            value="checkbox-unique-id-2"
          />
          <label
            className="slds-checkbox__label"
            htmlFor="checkbox-unique-id-2"
            id="check-select-all-label"
          >
            <span
              className="slds-checkbox_faux"
            />
            <span
              className="slds-form-element__label slds-assistive-text"
            >
              Select All
            </span>
          </label>
        </div>
      </div>
    </th>
    <th
      aria-label="Name"
      aria-sort="ascending"
      className="slds-is-resizable slds-is-sortable slds-is-sorted slds-is-sorted_asc slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Name"
          >
            Name
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <span
        aria-atomic="true"
        aria-live="polite"
        className="slds-assistive-text"
      >
        Sorted 
        ascending
      </span>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Name column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-8"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Account Name"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Account Name"
          >
            Account Name
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Account Name column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-9"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Close Date"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Close Date"
          >
            Close Date
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Close Date column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-10"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Stage"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Stage"
          >
            Stage
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Stage column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-11"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Confidence"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Confidence"
          >
            Confidence
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Confidence column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-12"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Amount"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Amount"
          >
            Amount
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Amount column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-13"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-label="Contact"
      aria-sort="none"
      className="slds-is-resizable slds-is-sortable slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": null,
        }
      }
    >
      <a
        className="slds-th__action slds-text-link_reset"
        href="#"
        onClick={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="slds-assistive-text"
        >
          Sort by: 
        </span>
        <div
          className="slds-grid slds-grid_vertical-align-center slds-has-flexi-truncate"
        >
          <span
            className="slds-truncate"
            title="Contact"
          >
            Contact
          </span>
          <span
            className="slds-icon_container slds-icon-utility-arrowdown"
            title={null}
          >
            <svg
              aria-hidden={true}
              className="slds-icon slds-icon-text-default slds-is-sortable__icon "
            >
              <use
                xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#arrowdown"
              />
            </svg>
          </span>
        </div>
      </a>
      <div
        className="slds-resizable"
      >
        <input
          aria-label="Contact column width"
          className="slds-resizable__input slds-assistive-text"
          id="cell-resize-handle-14"
          max="1000"
          min="20"
          tabIndex="0"
          type="range"
        />
        <span
          className="slds-resizable__handle"
        >
          <span
            className="slds-resizable__divider"
          />
        </span>
      </div>
    </th>
    <th
      aria-sort={null}
      className="slds-cell_action-mode"
      scope="col"
      style={
        Object {
          "width": "3.25rem",
        }
      }
    >
      <div
        className="slds-truncate slds-assistive-text"
        title="Actions"
      >
        Actions
      </div>
    </th>
  </tr>
</thead>
`;

exports[`Advanced data table row should render a table row 1`] = `
<tr
  className="slds-hint-parent"
>
  <td
    className="slds-text-align_right"
    role="gridcell"
  >
    <div
      className="slds-checkbox"
    >
      <input
        aria-labelledby="check-button-label-01 column-group-header"
        id="checkbox-01"
        name="options"
        tabIndex="-1"
        type="checkbox"
        value="checkbox-01"
      />
      <label
        className="slds-checkbox__label"
        htmlFor="checkbox-01"
        id="check-button-label-01"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </div>
  </td>
  <th
    className={null}
    scope="row"
    tabIndex="0"
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="10000"
    >
      10000
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Art V
      </a>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="-1"
      title="More actions for Acme"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Acme
      </span>
    </button>
  </td>
</tr>
`;

exports[`Advanced data table row should select the row 1`] = `
<tr
  aria-selected={true}
  className="slds-hint-parent slds-is-selected"
>
  <td
    className="slds-text-align_right"
    role="gridcell"
  >
    <div
      className="slds-checkbox"
    >
      <input
        aria-labelledby="check-button-label-01 column-group-header"
        defaultChecked={true}
        id="checkbox-01"
        name="options"
        tabIndex="-1"
        type="checkbox"
        value="checkbox-01"
      />
      <label
        className="slds-checkbox__label"
        htmlFor="checkbox-01"
        id="check-button-label-01"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </div>
  </td>
  <th
    className={null}
    scope="row"
    tabIndex="0"
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="10000"
    >
      10000
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Art V
      </a>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="-1"
      title="More actions for Acme"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Acme
      </span>
    </button>
  </td>
</tr>
`;

exports[`Advanced data table row should select the row with a radio button 1`] = `
<tr
  aria-selected={true}
  className="slds-hint-parent slds-is-selected"
>
  <td
    className="slds-text-align_right"
    role="gridcell"
  >
    <span
      className="slds-radio"
    >
      <input
        aria-labelledby="radio-button-label-01 column-group-header"
        defaultChecked={true}
        id="radio-01"
        name="options"
        tabIndex="-1"
        type="radio"
        value="radio-01"
      />
      <label
        className="slds-radio__label"
        htmlFor="radio-01"
        id="radio-button-label-01"
      >
        <span
          className="slds-radio_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </span>
  </td>
  <th
    className={null}
    scope="row"
    tabIndex="0"
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="10000"
    >
      10000
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Art V
      </a>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="-1"
      title="More actions for Acme"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Acme
      </span>
    </button>
  </td>
</tr>
`;

exports[`Advanced data table row should show amount scores 1`] = `
<tr
  className="slds-hint-parent"
>
  <td
    className="slds-text-align_right"
    role="gridcell"
  >
    <div
      className="slds-checkbox"
    >
      <input
        aria-labelledby="check-button-label-01 column-group-header"
        id="checkbox-01"
        name="options"
        tabIndex="-1"
        type="checkbox"
        value="checkbox-01"
      />
      <label
        className="slds-checkbox__label"
        htmlFor="checkbox-01"
        id="check-button-label-01"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </div>
  </td>
  <th
    className={null}
    scope="row"
    tabIndex="0"
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-grid slds-grid_vertical-align-center"
    >
      <div
        className="slds-truncate"
        title="10000"
      >
        10000
      </div>
      <div
        className="slds-icon_container slds-m-left_x-small slds-m-right_xx-small"
      >
        <span
          className="slds-icon-score"
          data-slds-state="negative"
          title="Description of the icon when needed"
        >
          <svg
            aria-hidden="true"
            className="slds-icon-score__positive"
            viewBox="0 0 5 5"
          >
            <circle
              cx="50%"
              cy="50%"
              r="1.875"
            />
          </svg>
          <svg
            aria-hidden="true"
            className="slds-icon-score__negative"
            viewBox="0 0 5 5"
          >
            <circle
              cx="50%"
              cy="50%"
              r="1.875"
            />
          </svg>
          <span
            className="slds-assistive-text"
          >
            Text alternative when needed
          </span>
        </span>
      </div>
      <div
        className="slds-truncate"
        title="Low"
      >
        Low
      </div>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Art V
      </a>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="-1"
      title="More actions for Acme"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Acme
      </span>
    </button>
  </td>
</tr>
`;

exports[`Advanced data table row should show record name cell in first row as focusable 1`] = `
<tr
  className="slds-hint-parent"
>
  <td
    className="slds-text-align_right"
    role="gridcell"
  >
    <div
      className="slds-checkbox"
    >
      <input
        aria-labelledby="check-button-label-01 column-group-header"
        id="checkbox-01"
        name="options"
        tabIndex="-1"
        type="checkbox"
        value="checkbox-01"
      />
      <label
        className="slds-checkbox__label"
        htmlFor="checkbox-01"
        id="check-button-label-01"
      >
        <span
          className="slds-checkbox_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </div>
  </td>
  <th
    className="slds-has-focus"
    scope="row"
    tabIndex="0"
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="10000"
    >
      10000
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Art V
      </a>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="-1"
      title="More actions for Acme"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Acme
      </span>
    </button>
  </td>
</tr>
`;

exports[`Advanced data table row should swap row selection to a radio button 1`] = `
<tr
  className="slds-hint-parent"
>
  <td
    className="slds-text-align_right"
    role="gridcell"
  >
    <span
      className="slds-radio"
    >
      <input
        aria-labelledby="radio-button-label-01 column-group-header"
        id="radio-01"
        name="options"
        tabIndex="-1"
        type="radio"
        value="radio-01"
      />
      <label
        className="slds-radio__label"
        htmlFor="radio-01"
        id="radio-button-label-01"
      >
        <span
          className="slds-radio_faux"
        />
        <span
          className="slds-form-element__label slds-assistive-text"
        >
          Select item 1
        </span>
      </label>
    </span>
  </td>
  <th
    className={null}
    scope="row"
    tabIndex="0"
  >
    <div
      className="slds-truncate"
      title="Acme"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Acme
      </a>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="salesforce"
    >
      salesforce
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="8/20/2018"
    >
      8/20/2018
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="closed"
    >
      closed
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="low"
    >
      low
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="10000"
    >
      10000
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="Art V"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Art V
      </a>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="-1"
      title="More actions for Acme"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Acme
      </span>
    </button>
  </td>
</tr>
`;

exports[`Product data table price cell should render 1`] = `
Array [
  <p>
    <s>
      $23.00
    </s>
  </p>,
  <p>
    $20.00
  </p>,
]
`;

exports[`Product data table product image should render 1`] = `
<div
  className="slds-size_xx-small"
>
  <img
    alt="Baseball Cap"
    src="/assets/images/product1.jpg"
    title="Baseball Cap"
  />
</div>
`;

exports[`Product data table product items details cell should make focusable elements focusable in actionableMode 1`] = `
<div
  className="slds-media"
>
  <div
    className="slds-media__figure"
  >
    <div
      className="slds-size_xx-small"
    >
      <img
        alt="Baseball Cap"
        src="/assets/images/product1.jpg"
        title="Baseball Cap"
      />
    </div>
  </div>
  <div
    className="slds-media__body"
  >
    <div
      className="slds-truncate"
      title="Baseball Cap"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="0"
      >
        Baseball Cap
      </a>
    </div>
    <ul>
      <li
        className="slds-truncate"
        title="Size: 7 3/4"
      >
        Size
        : 
        <strong>
          7 3/4
        </strong>
      </li>
      <li
        className="slds-truncate"
        title="Color: Blue"
      >
        Color
        : 
        <strong>
          Blue
        </strong>
      </li>
      <li
        className="slds-truncate"
        title="Item No.: 1007100"
      >
        Item No.
        : 
        <strong>
          1007100
        </strong>
      </li>
    </ul>
    <p
      className="slds-text-color_success"
    >
      In Stock
    </p>
  </div>
</div>
`;

exports[`Product data table product items details cell should render 1`] = `
<div
  className="slds-media"
>
  <div
    className="slds-media__figure"
  >
    <div
      className="slds-size_xx-small"
    >
      <img
        alt="Baseball Cap"
        src="/assets/images/product1.jpg"
        title="Baseball Cap"
      />
    </div>
  </div>
  <div
    className="slds-media__body"
  >
    <div
      className="slds-truncate"
      title="Baseball Cap"
    >
      <a
        href="#"
        onClick={[Function]}
        tabIndex="-1"
      >
        Baseball Cap
      </a>
    </div>
    <ul>
      <li
        className="slds-truncate"
        title="Size: 7 3/4"
      >
        Size
        : 
        <strong>
          7 3/4
        </strong>
      </li>
      <li
        className="slds-truncate"
        title="Color: Blue"
      >
        Color
        : 
        <strong>
          Blue
        </strong>
      </li>
      <li
        className="slds-truncate"
        title="Item No.: 1007100"
      >
        Item No.
        : 
        <strong>
          1007100
        </strong>
      </li>
    </ul>
    <p
      className="slds-text-color_success"
    >
      In Stock
    </p>
  </div>
</div>
`;

exports[`Product data table product quantity cell should render 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label slds-assistive-text"
    htmlFor="product-quantity-text-input-id-0"
  >
    Baseball Cap quantity
  </label>
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input slds-size_xxx-small slds-text-align_center slds-p-horizontal_x-small"
      id="product-quantity-text-input-id-0"
      placeholder=" "
      tabIndex="-1"
      type="text"
    />
  </div>
</div>
`;

exports[`Product data table product quantity cell should set a quantity 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label slds-assistive-text"
    htmlFor="product-quantity-text-input-id-0"
  >
    Baseball Cap quantity
  </label>
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input slds-size_xxx-small slds-text-align_center slds-p-horizontal_x-small"
      defaultValue="1"
      id="product-quantity-text-input-id-0"
      placeholder=" "
      tabIndex="-1"
      type="text"
    />
  </div>
</div>
`;

exports[`Product data table product quantity cell should set the input focusable in actionableMode 1`] = `
<div
  className="slds-form-element"
>
  <label
    className="slds-form-element__label slds-assistive-text"
    htmlFor="product-quantity-text-input-id-0"
  >
    Baseball Cap quantity
  </label>
  <div
    className="slds-form-element__control"
  >
    <input
      className="slds-input slds-size_xxx-small slds-text-align_center slds-p-horizontal_x-small"
      id="product-quantity-text-input-id-0"
      placeholder=" "
      tabIndex={null}
      type="text"
    />
  </div>
</div>
`;

exports[`Product data table row should make focusable elements focusable in actionableMode 1`] = `
<tr
  className="slds-hint-parent slds-align-top"
>
  <th
    className="slds-cell_action-mode"
    scope="row"
  >
    <div
      className="slds-media"
    >
      <div
        className="slds-media__figure"
      >
        <div
          className="slds-size_xx-small"
        >
          <img
            alt="Baseball Cap"
            src="/assets/images/product1.jpg"
            title="Baseball Cap"
          />
        </div>
      </div>
      <div
        className="slds-media__body"
      >
        <div
          className="slds-truncate"
          title="Baseball Cap"
        >
          <a
            href="#"
            onClick={[Function]}
            tabIndex="0"
          >
            Baseball Cap
          </a>
        </div>
        <ul>
          <li
            className="slds-truncate"
            title="Size: 7 3/4"
          >
            Size
            : 
            <strong>
              7 3/4
            </strong>
          </li>
          <li
            className="slds-truncate"
            title="Color: Blue"
          >
            Color
            : 
            <strong>
              Blue
            </strong>
          </li>
          <li
            className="slds-truncate"
            title="Item No.: 1007100"
          >
            Item No.
            : 
            <strong>
              1007100
            </strong>
          </li>
        </ul>
        <p
          className="slds-text-color_success"
        >
          In Stock
        </p>
      </div>
    </div>
  </th>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-form-element"
    >
      <label
        className="slds-form-element__label slds-assistive-text"
        htmlFor="product-quantity-text-input-id-1"
      >
        Baseball Cap quantity
      </label>
      <div
        className="slds-form-element__control"
      >
        <input
          className="slds-input slds-size_xxx-small slds-text-align_center slds-p-horizontal_x-small"
          defaultValue="1"
          id="product-quantity-text-input-id-1"
          placeholder=" "
          tabIndex={null}
          type="text"
        />
      </div>
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="4/10/17"
    >
      4/10/17
    </div>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <p>
      <s>
        $23.00
      </s>
    </p>
    <p>
      $20.00
    </p>
  </td>
  <td
    className="slds-cell_action-mode"
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="0"
      title="More actions for Baseball Cap"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Baseball Cap
      </span>
    </button>
  </td>
</tr>
`;

exports[`Product data table row should render 1`] = `
<tr
  className="slds-hint-parent slds-align-top"
>
  <th
    className={null}
    scope="row"
  >
    <div
      className="slds-media"
    >
      <div
        className="slds-media__figure"
      >
        <div
          className="slds-size_xx-small"
        >
          <img
            alt="Baseball Cap"
            src="/assets/images/product1.jpg"
            title="Baseball Cap"
          />
        </div>
      </div>
      <div
        className="slds-media__body"
      >
        <div
          className="slds-truncate"
          title="Baseball Cap"
        >
          <a
            href="#"
            onClick={[Function]}
            tabIndex="-1"
          >
            Baseball Cap
          </a>
        </div>
        <ul>
          <li
            className="slds-truncate"
            title="Size: 7 3/4"
          >
            Size
            : 
            <strong>
              7 3/4
            </strong>
          </li>
          <li
            className="slds-truncate"
            title="Color: Blue"
          >
            Color
            : 
            <strong>
              Blue
            </strong>
          </li>
          <li
            className="slds-truncate"
            title="Item No.: 1007100"
          >
            Item No.
            : 
            <strong>
              1007100
            </strong>
          </li>
        </ul>
        <p
          className="slds-text-color_success"
        >
          In Stock
        </p>
      </div>
    </div>
  </th>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-form-element"
    >
      <label
        className="slds-form-element__label slds-assistive-text"
        htmlFor="product-quantity-text-input-id-1"
      >
        Baseball Cap quantity
      </label>
      <div
        className="slds-form-element__control"
      >
        <input
          className="slds-input slds-size_xxx-small slds-text-align_center slds-p-horizontal_x-small"
          defaultValue="1"
          id="product-quantity-text-input-id-1"
          placeholder=" "
          tabIndex="-1"
          type="text"
        />
      </div>
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <div
      className="slds-truncate"
      title="4/10/17"
    >
      4/10/17
    </div>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <p>
      <s>
        $23.00
      </s>
    </p>
    <p>
      $20.00
    </p>
  </td>
  <td
    className={null}
    role="gridcell"
  >
    <button
      aria-haspopup="true"
      className="slds-button slds-button_icon slds-button_icon-border-filled slds-button_icon-x-small"
      onClick={[Function]}
      tabIndex="-1"
      title="More actions for Baseball Cap"
    >
      <svg
        aria-hidden={true}
        className="slds-button__icon slds-button__icon_hint slds-button__icon_small"
      >
        <use
          xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
        />
      </svg>
      <span
        className="slds-assistive-text"
      >
        More actions for Baseball Cap
      </span>
    </button>
  </td>
</tr>
`;
